feat: add trainig file

--- a/training.ipynb
+++ b/training.ipynb
@@ -6,46 +6,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -r requirements.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from ultralytics import YOLO"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "model: YOLO = YOLO(\"models/baseline.pt\")\n",
-    "test_image_path = \"test_images/football.jpg\""
+    "data_path = \"/home/krisnol/Documents/football-object-detection/datasets/data.yaml\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "image 1/1 /home/krisnol/Documents/football-object-detection/test_images/football.jpg: 384x640 13 persons, 3.0ms\n",
-      "Speed: 0.7ms preprocess, 3.0ms inference, 0.9ms postprocess per image at shape (1, 3, 384, 640)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "results = model(test_image_path)\n",
-    "results[0].show()"
+    "results = model.train(\n",
+    "    data=data_path,\n",
+    "    epochs=1,\n",
+    "    batch=16,\n",
+    "    device=\"0\",\n",
+    "    workers=8,\n",
+    "    project=\"runs/train\",\n",
+    "    name=\"baseline\",\n",
+    "    exist_ok=True,\n",
+    "    save_period=1,\n",
+    ")\n",
+    "#  /home/krisnol/Documents/data/rbk_structured/train/images\n",
+    "#  /home/krisnol/Documents/football-object-detection/data/rbk_structured/val/images\n",
+    "# "
    ]
   }
  ],
