feat: add a k:-fold

--- a/format_labels.ipynb
+++ b/format_labels.ipynb
@@ -76,6 +76,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# normalize the coordinates\n",
+    "combined[\"x_center\"] = combined[\"x_center\"] / 1920\n",
+    "combined[\"y_center\"] = combined[\"y_center\"] / 1080\n",
+    "combined[\"width\"] = combined[\"width\"] / 1920\n",
+    "combined[\"height\"] = combined[\"height\"] / 1080"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def save_to_file(dataframe, picture_id):\n",
     "    dataframe = dataframe[[\"class\", \"x_center\", \"y_center\", \"width\", \"height\"]]\n",
     "    dataframe[\"class\"] = dataframe[\"class\"] - 1\n",
